2010-05-13  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs:
	* gtk-gui/gui.stetic:
	* Gui/IPhoneOptionsPanel.cs:
	* MonoDevelop.IPhone.csproj:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneOptionsWidget.cs:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneOptionsPanelWidget.cs:
	  Add settings for more icons (currently unused).

2010-05-13  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs: Overwrite the C# platform target in case
	  it's been mistakenly set to x86 by older MD versions.

2010-05-13  Lluis Sanchez Gual  <lluis@novell.com>

	* ChangeLog:
	* Templates/IPhoneProjectEmpty.xpt.xml:
	* Templates/IPhoneOpenGLProject.xpt.xml:
	* Templates/IPhoneUtilityProject.xpt.xml:
	* Templates/IPhoneLibraryProject.xpt.xml:
	* Templates/IPhoneNavBasedProject.xpt.xml:
	* Templates/IPadWindowBasedProject.xpt.xml:
	* Templates/IPhoneWindowBasedProject.xpt.xml:
	* Templates/UniversalWindowBasedProject.xpt.xml: Reverted
	  target platform change.

2010-05-12  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs: Track API.

2010-05-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs: Fix typo.

2010-05-07  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDeviceConsole.cs: Use existing LogView class.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDeviceConsole.cs: Fix idle handler.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDeviceConsole.cs: Use a queue and idle handler instead
	  of application.invoke.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* InterfaceBuilder/IBConnectionRecord.cs: Added missing
	  property.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Only check for PkgInfo in device
	  builds.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Fix NeedsBuilding check.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFramework.cs: Fix NRE.
