@@ -68,7 +68,85 @@ namespace MonoDevelop.IPhone.Gui
 
 		void HandleTargetDevicesComboChanged (object sender, EventArgs e)
 		{
-			iPadNibPicker.Sensitive = targetDevicesCombo.Active == 0;
+			switch (SupportedDevices) {
+			case TargetDevice.IPhoneAndIPad:
+				iPadNibPicker.Sensitive = true;
+				IPhoneIconSensitive = true;
+				IPadIconSensitive = true;
+				IPadSpotlightIconSensitive = true;
+				SettingsIconSensitive = true;
+				break;
+			case TargetDevice.IPhone:
+				iPadNibPicker.Sensitive = false;
+				IPhoneIconSensitive = true;
+				IPadIconSensitive = false;
+				IPadSpotlightIconSensitive = false;
+				SettingsIconSensitive = true;
+				break;
+			case TargetDevice.IPad:
+				iPadNibPicker.Sensitive = false;
+				IPhoneIconSensitive = false;
+				IPadIconSensitive = true;
+				IPadSpotlightIconSensitive = true;
+				SettingsIconSensitive = true;
+				break;
+			}
+		}
+		
+		bool IPhoneIconSensitive {
+			set {
+				iphoneIconLabel.Sensitive = iphoneIconSizeLabel.Sensitive = iphoneIconPicker.Sensitive = value;
+			}
+		}
+		
+		bool IPadIconSensitive {
+			set {
+				ipadIconLabel.Sensitive = ipadIconSizeLabel.Sensitive = ipadIconPicker.Sensitive = value;
+			}
+		}
+		
+		bool IPadSpotlightIconSensitive {
+			set {
+				ipadSpotlightIconLabel.Sensitive = ipadSpotlightIconSizeLabel.Sensitive
+					= ipadSpotlightIconPicker.Sensitive = value;
+			}
+		}
+		
+		bool SettingsIconSensitive {
+			set {
+				settingsIconLabel.Sensitive = settingsIconSizeLabel.Sensitive = settingsIconPicker.Sensitive = value;
+			}
+		}
+		
+		TargetDevice SupportedDevices {
+			get {
+				switch (targetDevicesCombo.Active) {
+				case 0:
+					return TargetDevice.IPhoneAndIPad;
+				case 1:
+					return TargetDevice.IPhone;
+				case 2:
+					return TargetDevice.IPad;
+				default:
+					throw new InvalidOperationException ("targetDevicesCombo has unexpected value");
+				}
+			}
+			set {
+				switch (value) {
+				case TargetDevice.IPhoneAndIPad:
+					targetDevicesCombo.Active = 0;
+					break;
+				case TargetDevice.IPhone:
+					targetDevicesCombo.Active = 1;
+					break;
+				case TargetDevice.IPad:
+					targetDevicesCombo.Active = 2;
+					break;
+				default:
+					LoggingService.LogWarning ("Unknown value '{0}' in SupportedDevices. Changing to default.");
+					goto case TargetDevice.IPhone;
+				}
+			}
 		}
 		
 		public void Load (IPhoneProject proj)
@@ -92,20 +170,7 @@ namespace MonoDevelop.IPhone.Gui
 			targetDevicesCombo.AppendText (GettextCatalog.GetString ("iPhone only"));
 			targetDevicesCombo.AppendText (GettextCatalog.GetString ("iPad only"));
 			
-			switch (proj.SupportedDevices) {
-			case TargetDevice.IPhoneAndIPad:
-				targetDevicesCombo.Active = 0;
-				break;
-			case TargetDevice.IPhone:
-				targetDevicesCombo.Active = 1;
-				break;
-			case TargetDevice.IPad:
-				targetDevicesCombo.Active = 2;
-				break;
-			default:
-				LoggingService.LogWarning ("Unknown value '{0}' in SupportedDevices. Changing to default.");
-				goto case TargetDevice.IPhone;
-			}
+			SupportedDevices = proj.SupportedDevices;
 			
 			HandleTargetDevicesComboChanged (null, null);
 			
@@ -136,17 +201,7 @@ namespace MonoDevelop.IPhone.Gui
 			proj.BundleIconSpotlight = NullIfEmpty (settingsIconPicker.SelectedFile);
 			proj.BundleIconIPadSpotlight = NullIfEmpty (ipadSpotlightIconPicker.SelectedFile);
 			
-			switch (targetDevicesCombo.Active) {
-			case 0:
-				proj.SupportedDevices = TargetDevice.IPhoneAndIPad;
-				break;
-			case 1:
-				proj.SupportedDevices = TargetDevice.IPhone;
-				break;
-			case 2:
-				proj.SupportedDevices = TargetDevice.IPad;
-				break;
-			}
+			proj.SupportedDevices = SupportedDevices;
 		}
 		
 		string NullIfEmpty (string s)
